--- a/main.css
+++ b/main.css
@@ -967,7 +967,7 @@ transform: rotate(45deg) translate(-7px, -6px);
     }
     p.small{
         font-size: 12px;
-       
+        width: 40vw;
     }
 
     nav{
