--- a/main.css
+++ b/main.css
@@ -250,14 +250,13 @@ nav h1{
     margin-bottom: 25vh;
 }
 
-.new img, a img{
+.new img{
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 400px;
     margin: 0 auto;
     object-fit: cover;
 }
-
 
 
 .new p{
@@ -270,28 +269,7 @@ nav h1{
 }
 
 
-div .cheesecake{
-    display: none;
-    position: absolute;
-    top: 10vh;
-    left: 0;
-    animation: showMe 2s ease infinite 0.2s forwards;
-    animation-play-state: paused;
-    z-index: -2;
-}
 
- .cheesecake:nth-child(1){
-    animation-delay: 0.3s;
-	z-index: -2;
-}
- .cheesecake:nth-child(2){
-	animation-delay: .6s;
-	z-index: -1;
-}
- .cheesecake:nth-child(3){
-	animation-delay: .9s;
-	z-index: 1;
-}
 
 
 /*!!!!!!!!!!!!! CONTENT 3 !!!!!!!!!!!!!!*/
@@ -508,7 +486,7 @@ fill:  #d45151;
     transition: all .6s ease;
 }
 
-div:hover .cheesecake{
+a:hover .cheesecake{
     opacity: 1;
     display: block;
     animation-play-state: running;
