--- a/cakepage.css
+++ b/cakepage.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-y: auto;
 }
 
 body{
@@ -538,6 +539,7 @@ button:active{
         padding: 0;
         box-sizing: border-box;
         overflow-x: hidden;
+        overflow-y: auto;
     }
     
     body{
