--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
+    overflow-y: auto;
 }
 /* width */
 ::-webkit-scrollbar {
@@ -661,6 +661,7 @@ transform: rotate(45deg) translate(-7px, -6px);
 {
     html, body{ 
         overflow-x: hidden;
+        overflow-y: auto;
     } 
     body{
         position: relative;
@@ -918,6 +919,7 @@ transform: rotate(45deg) translate(-7px, -6px);
 @media only screen and (max-width: 900px) and (min-width: 768px) {
     html, body{ 
         overflow-x: hidden;
+        overflow-y: auto;
     } 
     body{
         position: relative;
