--- a/customized.css
+++ b/customized.css
@@ -6,7 +6,6 @@
     padding: 0;
     box-sizing: border-box;
     user-select: none;
-    overflow-y: auto;
 }
 /* width */
 ::-webkit-scrollbar {
@@ -51,6 +50,7 @@ body{
     width: 20vh;
     height: 20vh;
     margin-left: 60px;
+    pointer-events: none;
 }
 .name{
     width: 50%;
