--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-y: auto;
+   
 }
 /* width */
 ::-webkit-scrollbar {
@@ -259,6 +259,7 @@ nav h1{
 }
 
 
+
 .new p{
     height: 10vh;
     padding: 10px 10px;
@@ -269,7 +270,28 @@ nav h1{
 }
 
 
+a .cheesecake{
+    display: none;
+    position: absolute;
+    top: 10vh;
+    left: 0;
+    animation: showMe 2s ease infinite 0.2s forwards;
+    animation-play-state: paused;
+    z-index: -2;
+}
 
+ .cheesecake:nth-child(1){
+    animation-delay: 0.3s;
+	z-index: -2;
+}
+ .cheesecake:nth-child(2){
+	animation-delay: .6s;
+	z-index: -1;
+}
+ .cheesecake:nth-child(3){
+	animation-delay: .9s;
+	z-index: 1;
+}
 
 
 /*!!!!!!!!!!!!! CONTENT 3 !!!!!!!!!!!!!!*/
@@ -661,7 +683,6 @@ transform: rotate(45deg) translate(-7px, -6px);
 {
     html, body{ 
         overflow-x: hidden;
-        overflow-y: auto;
     } 
     body{
         position: relative;
@@ -919,7 +940,6 @@ transform: rotate(45deg) translate(-7px, -6px);
 @media only screen and (max-width: 900px) and (min-width: 768px) {
     html, body{ 
         overflow-x: hidden;
-        overflow-y: auto;
     } 
     body{
         position: relative;
